--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],    
     "require": {
         "php": ">=5.4",
-        "jgswift/kindentfy": "dev-master"
+        "jgswift/qtil": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
