--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "keywords": ["php","magic","observer","trait"],
     "license": "MIT",
     "type": "library",
+    "minimum-stability": "dev",
     "authors": [
         {
             "name": "Josh Swift",
@@ -14,7 +15,8 @@
     ],    
     "require": {
         "php": ">=5.5",
-        "jgswift/qtil": "dev-master"
+        "jgswift/qtil": "dev-master",
+        "jgswift/qio": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
