--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     ],    
     "require": {
         "php": ">=5.5",
-        "jgswift/qtil": "dev-master",
-        "jgswift/qio": "dev-master"
+        "jgswift/qtil": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
