--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -6,13 +6,13 @@ build:
 checks:
     php:
         code_rating: true
-        duplication: true
+        duplication: false
         variable_existence: true
         useless_calls: true
         use_statement_alias_conflict: true
         unused_variables: true
         unused_properties: true
-        unused_parameters: true
+        unused_parameters: false
         unused_methods: true
         unreachable_code: true
         sql_injection_vulnerabilities: true
@@ -21,7 +21,7 @@ checks:
         precedence_in_conditions: true
         parameter_non_unique: true
         no_property_on_interface: true
-        no_non_implemented_abstract_methods: true
+        no_non_implemented_abstract_methods: false
         deprecated_code_usage: true
         closure_use_not_conflicting: true
         closure_use_modifiable: true
