--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -10,8 +10,8 @@ checks:
         variable_existence: true
         useless_calls: true
         use_statement_alias_conflict: true
-        unused_variables: true
-        unused_properties: true
+        unused_variables: false
+        unused_properties: false
         unused_parameters: false
         unused_methods: true
         unreachable_code: true
