--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         }
     ],    
     "require": {
-        "php": ">=5.5"
+        "php": ">=5.5",
+        "react/promise": "2.0.0"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
